--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 body {
   color: white;
-  background-color: #181818;
+  background-color: #0f0f0f;
   /* estilos agregados */
+  /* background-image: url("https://i.imgur.com/FF7NfEi.jpeg" );
+  
+  background-repeat: no-repeat; */
+  
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -16,7 +20,7 @@ body {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-color: #181818;
+  background-color: #0f0f0f;
 }
 
 .logo {
@@ -25,12 +29,7 @@ body {
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+
 
 @keyframes logo-spin {
   from {
