--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #0f0f0f;
 
+
+
+  /* background-image: url("https://i.imgur.com/FF7NfEi.jpeg"); */
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
