--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 body {
   color: white;
-  background-color: #0f0f0f;
+  /* background-color: #0f0f0f; */
   /* estilos agregados */
-  /* background-image: url("https://i.imgur.com/FF7NfEi.jpeg" );
+  background-image: url("https://i.imgur.com/bdqWKUJ.jpeg" );
+  background-size: cover;
   
-  background-repeat: no-repeat; */
+  background-repeat: no-repeat;
   
   margin: 0;
   padding: 0;
@@ -20,7 +21,7 @@ body {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-color: #0f0f0f;
+  /* background-color: #0f0f0f; */
 }
 
 .logo {
