--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,31 @@
   font-style: normal;
 }
 
+.emptyCartContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+ width: 500px;
+  height: 200px;
+
+  transition: box-shadow 0.5s ease;
+
+  
+}
+
+.emptyCartContainer.active{
+  box-shadow: 0px 3px 20px #5fffa4e6;
+}
+
+.h1emptyCart{
+  padding-top: 30px;
+  font-size: 4em;
+  font-weight: 400;
+  line-height: 1.1;
+}
+
+
 
 a {
   font-weight: 500;
@@ -54,6 +79,12 @@ h1 {
   line-height: 1.1;
 }
 
+footer{
+  margin-top: 50px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
 
 button {
   border-radius: 8px;
