--- a/src/components/CartComponent.css
+++ b/src/components/CartComponent.css
@@ -1,5 +1,104 @@
-.CartTextContainer{
-    background-color: #0f0f0f;
-    box-shadow: none;
+main {
+  background-color: none;
+}
 
+.CartTextContainer {
+  width: 1000px;
+}
+
+.h1EmptyCart {
+  margin: 0px;
+  padding: 0px 0px 20px 0px;
+}
+
+.h1CartList {
+  padding: 100px 0px 0px 0px;
+}
+
+.emptyCartContainer {
+  width: 1000px;
+  box-shadow: none;
+}
+
+.cartItemCard {
+  justify-self: center;
+  width: 600px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  margin-bottom: 10px;
+
+  background-image: linear-gradient(to right, #e5e4ea, #e5e4ea, gray);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  max-width: 500px;
+}
+
+.cartItemImageContainer {
+  width: 100%;
+  height: 100%;
+
+  border-radius: 8px;
+  overflow: hidden;
+  display: flex;
+  scale: (1.1);
+  align-items: center;
+  justify-content: center;
+}
+
+.productCartImage {
+  background-color: #e5e4ea;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+  border-radius: 8px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.productCartImage:hover {
+  transform: scale(1.2);
+  background-color: #e5e4ea;
+
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.cartItems {
+  background-color: #0f0f0fb3;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.cartItemDetails {
+  width: 170%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-grow: 1;
+}
+.cartItemDetails h3 {
+  margin: 0;
+  font-size: 16px;
+  color: #333;
+}
+
+.cartItemDetails p {
+  margin: 5px 0;
+  font-size: 14px;
+  color: #555;
+}
+
+hr {
+  margin: 25px 0px;
+  width: 100%;
+  border: none;
+  margin: 10px 0;
+}
+
+.emptyCartButton {
+  margin: 30px;
+  font-size: x-large;
 }
