--- a/src/index.css
+++ b/src/index.css
@@ -79,11 +79,12 @@ h1 {
   line-height: 1.1;
 }
 
-footer{
+footer {
   margin-top: 50px;
   position: fixed;
   bottom: 0;
-  width: 100%;
+  left: 0;
+  padding-left: 5px;
 }
 
 button {
