--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,24 @@
 body {
   color: white;
-  
-  /* estilos agregados */
+  display: flex;
   background-image: url("https://i.imgur.com/goOtaGT.jpeg" );
+  width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center center;
   
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  width: 100%;
+  
   min-height: 100vh;
   overflow-x: hidden;
-  display: flex;
+  
 }
 
 #root {
+  
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
