--- a/src/components/ItemListContainer.css
+++ b/src/components/ItemListContainer.css
@@ -12,7 +12,7 @@ main {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 15px;
-  row-gap: 8px;
+  row-gap: 15px;
   width: 100%;
   max-width: 1200px; /* Ajusta el tamaño máximo */
   margin: 0 auto; /* Centra el contenido */
@@ -22,7 +22,14 @@ h1 {
   padding-top: 70px;
 }
 
-.H2text {
-  padding-bottom: 5px;
-  
+
+h2{
+  font-family: monospace;
+  font-size: xx-large;
+  margin-top: 0px;
+}
+
+
+section{
+padding: 27px;
 }
