--- a/src/components/CheckoutComponent.css
+++ b/src/components/CheckoutComponent.css
@@ -3,7 +3,7 @@
 
 
 .CheckoutContainer {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: #0f0f0fe1;
     padding: 30px;
     border-radius: 10px;
     width: 1000px;
@@ -54,9 +54,6 @@ form button:hover {
     padding: 0px 0px 20px 0px;
 }
 
-.h1CartList {
-    padding: 100px 0px 0px 0px;
-}
 
 .emptyCartContainer {
     width: 1000px;
@@ -134,7 +131,7 @@ hr {
     margin: 25px 0px;
     width: 100%;
     border: none;
-    margin: 10px 0;
+    margin: 30px 0;
 }
 
 .CartButton {
@@ -142,6 +139,25 @@ hr {
     font-size: x-large;
 }
 
-.h3Total {
+
+.TotalContainer {
+    display: flex;
+    justify-content: center; /* Centra los elementos horizontalmente */
+    align-items: center;     /* Centra los elementos verticalmente */
+    gap: 10px; 
+}
+
+.PTotal {
     font-size: xx-large;
+    color: #5fffb7e6;
+}
+
+
+
+.H1Check{
+padding: 30px 0px 5px 0px;
+}
+
+.H2Check{
+    padding-bottom: 30px;
 }
