--- a/src/components/NotFoundComponent.css
+++ b/src/components/NotFoundComponent.css
@@ -3,7 +3,7 @@ position: relative;
 width: 100%;
 max-height: 1000px;
 max-width: 2000px;
-margin: 5px;
+margin-top: 50px;
 }
 
 .NotFoundContainer video{
@@ -15,14 +15,18 @@ margin: 5px;
 
 .TextOverposted{
     position: absolute;
-    top: 20%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%,);
     text-align: center;
     color: rgb(235, 233, 233);
-    font-size: 20px;
+    font-size: 50px;
     
     padding: 10px 20px;
     border-radius: 10px;
     
+}
+
+p{
+    font-size: xx-large;
 }
